# dynamic-qrcode-image

./: LICENSE  README.md  index.html  pyproject.toml  qr2.py  qrc.py  r.txt  test.py  w2.py
.github/workflows/: python-publish.yml
src/dynamic_qrcode_image/: __init__.py  __main__.py  config.py  form.py  qr2.py  qrc.py  w2.py
src/dynamic_qrcode_image/docs/: index.md
src/dynamic_qrcode_image/templates/: submit.html
templates/: submit.html
